# bath-cag2

./: .gitignore  Board.cpp  Board.h  ErrorCheck.h  HelloMaya.cpp  Node.cpp  Node.h  README.md  TreeHandler.h  ttt.cpp
report/: t3_report.bib
report/images/: ttt_tree.dia
t1_presentation/: appm_presentation.tex  fancyslides.cls
t2_2_meshAnim/src/: ShapeIntrpltCmd.cpp  ShapeIntrpltCmd.h  ShapeIntrpltNode.h
t2_meshAnim/report/: t2_meshAnim.bib  t2_meshAnim.tex
t2_meshAnim/scenes/: armadilloSmallScene.mb  horseScene.mb
t2_meshAnim/src/: ShapeIntrpltCmd.cpp  ShapeIntrpltCmd.h  ShapeIntrpltNode.cpp  ShapeIntrpltNode.h  ShapePlugin.cpp
t3_1_A_star/: Map.h
t3_1_A_star/src/: AStarSearch.cpp  AStarSearch.h  AStartState.h  Map.cpp  Map.h  MapSearchNode.cpp  MapSearchNode.h  fsa.h  stlastar.h  t3_1_A_star.cpp
t3_2_qvalue/: State.cpp  ttt.cpp
t3_2_qvalue/src/: Board.cpp  Board.h  ExtraFun.h  Node.cpp  State.h  TreeHandler.cpp  TreeHandler.h  ttt.cpp
t3_3_blackjack/: blackjack.py
t3_3_blackjack/src/: ExtraFun.h  State.cpp  State.h  TreeHandler.cpp  TreeHandler.h  blackjack.py  t3_3_blackjack.cpp
t3_learning/t3_1_A_star/: AStarSearch.h  Map.cpp
t3_learning/t3_2_qvalue/: Board.cpp  TreeHandler.cpp  tree.hh
t3_report/: t3_Reinforcement_Learning.tex  t3_report.bib
t3_report/images/: blackjackExpectedGain.eps  tttExpectedGain.eps  ttt_tree.eps
t4_cloth/code/: CMakeLists.txt  README  render.sh  t4_cloth_mentalray.mi
t4_cloth/code/src/: cloth_node.cpp  cloth_photon.cpp  maya_illum_lambert.cpp
t4_cloth/presentation/: cloth_presentation.tex
t4_cloth/report/: t4_cloth_rendering.tex  t4_report.bib
t4_cloth/scenes/: cloth1.mb  cloth2_side_constraint.mb  cloth3_wind.mb  cloth4_wind.ma  shaderTest.ma  (+4 more)
t4_cloth/src/: CMakeLists.txt  ClothNode.cpp  ClothNode.h  ClothShader.cpp  ClothShaderOverride.cpp  ClothShaderOverride.h  ClothShaderPlugin.cpp  phongShader.cpp  phongShaderOverride.cpp
t4_cloth/src/cmodules/: FindMaya.cmake
(+8 files in other folders)
